# ai-government

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
docs/: AI_STACK.md  CABINET.md  CABINET_MNE.md  CHALLENGES.md  CHALLENGES_MNE.md  CONSTITUTION.md  CONSTITUTION_MNE.md  CONTEXT.md  DECISIONS.md  DECISIONS_MNE.md  ROADMAP.md  STATUS.md
government/: config.py  orchestrator.py  session.py
output/: twitter_state.json
scripts/: backfill_translations.py  build_site.py  docker-entrypoint.sh  launch_dev_member.sh  main_loop.py  pr_workflow.py  run_session.py  self_improve.py
site/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
tests/: conftest.py  test_analysis_rate_limit.py  test_backlog_prioritization.py  test_ci_health_check.py  test_circuit_breaker.py  test_cycle_allocation.py  test_default_model.py  test_director_context.py  test_director_staffing.py  test_editorial_director.py  test_error_logging.py  test_executive_summary.py  test_gap_observation.py  test_gh_body_size.py  test_ghost_merge.py  test_infrastructure_error.py  test_issue_passed_to_workflow.py  test_ministry_eu_prompt.py  test_ministry_tourism.py  test_news_scout.py  test_pipeline_health_check.py  test_pm_prompt.py  test_productive_cycles.py  test_propose_debate_flow.py  test_propose_stability.py  test_research_scout.py  test_retry_failed_issues.py  test_run_gh_timeout.py  test_sdk_options.py  test_sdk_retry.py  test_session_api_key.py  (+4 more)
(+215 files in other folders)
