[project]
name = "ai-government"
version = "0.1.0"
description = "AI mirror of the Montenegrin government — analyzes real decisions, produces impactful scorecards and reports of public interest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk",
    "pydantic>=2.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "markdown>=3.5",
    "tweepy>=4.14",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ai-gov-session = "ai_government.session:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_government"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/ai_government/prompts/*.py" = ["E501"]
"src/ai_government/orchestrator.py" = ["TCH001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markdown", "markdown.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tweepy", "tweepy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
